# glm-summarizer

./: .gitignore  README.md  config.example.yaml  pyproject.toml
contrib/: github-actions-pr-summary.yml  gitlab-ci-summarize.yml  install-hook.sh  post-commit  watch.sh
src/glm_summarizer/: __init__.py  benchmark.py  cache.py  cli.py  client.py  config.py  strategies.py  summarizer.py  templates.py
tests/: test_benchmark.py  test_cache.py  test_config.py  test_strategies.py  test_summarizer.py
